--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,31 +16,20 @@
           </a>
 
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to(user_path(current_user.username), class: 'dropdown-item') do %>
-              <%= fa_icon 'user-o', text: 'الصفحة الشخصية' %>
-            <% end %>
-
-            <%= link_to edit_user_registration_path, class: 'dropdown-item' do %>
-              <%= fa_icon 'sliders', text: 'الاعدادات' %>
-            <% end %>
+            <a class="dropdown-item" href="#">الصفحة الرئيسية</a>
+            <%= link_to 'ألاعدادات', edit_user_registration_path, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
-            <%= link_to destroy_user_session_path, method: :delete, class: 'dropdown-item' do %>
-              <%= fa_icon 'sign-out', text: 'تسجيل الخروج' %>
-            <% end %>
+            <%= link_to 'تسجيل الخروج', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
           </div>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">الحائط</a>
+        </li>
 
-        <%= link_to root_path, class: 'nav-link' do %>
-          <%= content_tag :span, 'الرئيسية' %>
-          <%= fa_icon 'home' %>
-        <% end %>
-
-        <%= link_to tweeters_path, class: 'nav-link' do %>
-          <%= content_tag :span, 'المغردون' %>
-          <%= fa_icon 'user-circle' %>
-        <% end %>
-
-        <%= render 'layouts/notifications' %>
+        <li class="nav-item">
+          <a class="nav-link" href="#">المستخدمين</a>
+        </li>
+     
       <% else %>
         <li class="nav-item">
           <%= link_to 'تسجيل الدخول', new_user_session_path, class: 'nav-link' %>
