--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,38 +4,41 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :username, required: true, autofocus: true%>
+    <%= f.input :username, label: 'اسم المستخدم', required: true, autofocus: true%>
 
-  <%= f.input :age %>
-  <%= f.input :gender %>
-  <%= f.input :bio %>
+  <%= f.input :age, label: 'العمر' %>
+  <%= f.input :gender, label: 'الجنس' %>
+  <%= f.input :bio, label: 'النبذة الشخصية' %>
 
-    <%= f.input :email, required: true%>
+    <%= f.input :email, label: 'البريد الالكتروني', required: true%>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
     <%= f.input :password,
+                label: 'كلمة المرور',
                 hint: "leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
+                label: 'تاكيد كلمة المرور',
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
+                label: 'كلمة المرور الحالية',
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "تعديل" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>الغاء حسابي</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>اذا كنت غير يمكنك  <%= link_to "الغاء حسابك", registration_path(resource_name), data: { confirm: "هل انت متاكد؟" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "رجوع", :back %>
