--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,31 @@
-<h2>Sign up</h2>
+<h2>تسجيل</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :username,
+                label: 'اسم المستخدم',
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "username" }%>
     <%= f.input :email,
+                label: 'البريد الالكتروني',
                 required: true,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
+                label: 'كلمة المرور',
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
+                label: 'تاكيد كلمة المرور',
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "تسجيل" %>
   </div>
 <% end %>
 
