--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/messages' %>
-    <%= yield %>
+
+    <div class="container-fluid">
+      <%= render 'layouts/messages' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
