--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row flex-row-reverse">
     <div class="col-3">
         <%= gravatar_tag @user.email, size: 500, :html => { :class => 'img-fluid'} %>
     </div>
